tests/ui/basic/call_non_function.rs
use metamatch::eval;

fn main() {
    eval! {
        let x = 5;
        x()
    };
}
